# ms-graph-sdk

./: LICENSE  README.md  setup.cfg
ms_graph_sdk/: __init__.py  exception.py  lists.py  message.py  users.py
ms_teams_sdk/: auth.py  lists.py  message.py  users.py
