[metadata]
name = ms-teams-sdk
version = 0.0.1
author = Sudharsan Ramakrishnan
author_email = sudharsan.ramakrishnan@wdc.com
description = Library to interact with Microsoft Teams using Graph API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SudharsanRama/ms-teams-sdk
project_urls =
    Bug Tracker = https://github.com/SudharsanRama/ms-teams-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = Microsoft, Teams

[options]
package_dir =
    = ms-teams-sdk
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src